namespaces/live.cloud-platform.service.justice.gov.uk/ai-training-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "ai-training-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "bold-ai-for-linked-data"
    cloud-platform.justice.gov.uk/application: "AI Training"
    cloud-platform.justice.gov.uk/owner: "BOLD programme: ai-for-linked-data@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/ai-training"
    cloud-platform.justice.gov.uk/team-name: "bold-ai-for-linked-data"
    cloud-platform.justice.gov.uk/review-after: ""
